--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,10 @@
       android:versionCode="14"
       android:versionName="1.11">
       
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     <uses-sdk android:minSdkVersion="8" />
     <uses-feature android:name="android.software.live_wallpaper" />
 
@@ -33,10 +37,33 @@
 			android:label="@string/app_name"
 			android:exported="true">
 		</activity>
-        
+
+        <!-- ************************************* -->
+        <!--      APPWIDGET                        -->
+        <!-- ************************************* -->
+
+        <receiver android:name=".appwidget.ExampleAppWidgetProvider">
+            <meta-data android:name="android.appwidget.provider"
+                    android:resource="@xml/appwidget_provider" />
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".appwidget.ExampleAppWidgetConfigure">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+
+        <receiver android:name=".appwidget.WidgetBroadcastReceiver">
+        <!-- 
+            <intent-filter>
+                <action android:name=".appwidget.WidgetBroadcastEnum.SAVE_ACTION" />
+                <action android:name="hram.android.PhotoOfTheDay.appwidget.WidgetBroadcastEnum.SAVE_ACTION" />
+            </intent-filter>
+			 -->	
+        </receiver>
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
 </manifest>
