--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,16 @@
             
         </activity>
         
+        <activity android:name=".appwidget.SDImagesScaner"
+                android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.settings.SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
 		<service android:name=".Wallpaper"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
