--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,10 @@
               android:targetSdkVersion="14"/>
     <uses-feature android:name="android.software.live_wallpaper" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" 
+        	android:label="@string/app_name"
+        	android:name=".App"
+        	android:debuggable="false">
 		
         <activity android:name=".SetUpLiveWallpaper"
                   android:label="@string/app_name">
