--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,12 +27,10 @@
             
         </activity>
         
-        <activity android:name=".appwidget.SDImagesScaner"
-                android:label="@string/app_name">
+        <activity android:name=".appwidget.ImagesGallery"
+                android:label="@string/app_name_gallery">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
