--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
             
         </activity>
         
-        <activity android:name=".appwidget.ImagesGallery"
+        <activity android:name=".appwidget.AndroidCustomGalleryActivity"
                 android:label="@string/app_name_gallery">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
