--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,7 +49,11 @@
 			android:exported="true">
 		</activity>
 
-        <!-- ************************************* -->
+		<activity android:name=".appwidget.FastSettings" 
+			android:label="@string/app_name"
+			android:exported="true">
+		</activity>
+		<!-- ************************************* -->
         <!--      APPWIDGET                        -->
         <!-- ************************************* -->
 
