--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="hram.android.PhotoOfTheDay"
-      android:versionCode="17"
-      android:versionName="2.2">
+      android:versionCode="18"
+      android:versionName="2.3">
       
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,8 +13,7 @@
     <uses-feature android:name="android.software.live_wallpaper" />
 
     <application android:icon="@drawable/icon" 
-        	android:label="@string/app_name"
-        	android:debuggable="false">
+        	android:label="@string/app_name">
 		
         <activity android:name=".SetUpLiveWallpaper"
                   android:label="@string/app_name">
@@ -45,13 +44,11 @@
         </service>
         
 		<activity android:name=".Settings" 
-			android:label="@string/app_name"
-			android:exported="true">
+			android:label="@string/app_name">
 		</activity>
 
 		<activity android:name=".appwidget.FastSettings" 
-			android:label="@string/app_name"
-			android:exported="true">
+			android:label="@string/app_name">
 		</activity>
 		<!-- ************************************* -->
         <!--      APPWIDGET                        -->
