--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="hram.android.PhotoOfTheDay"
-      android:versionCode="18"
-      android:versionName="2.3">
+      android:versionCode="19"
+      android:versionName="2.4">
       
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -44,11 +44,13 @@
         </service>
         
 		<activity android:name=".Settings" 
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:exported="true">
 		</activity>
 
 		<activity android:name=".appwidget.FastSettings" 
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:exported="true">
 		</activity>
 		<!-- ************************************* -->
         <!--      APPWIDGET                        -->
