--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="hram.android.PhotoOfTheDay"
-      android:versionCode="19"
+      android:versionCode="20"
       android:versionName="2.4">
       
     <uses-permission android:name="android.permission.INTERNET" />
@@ -48,6 +48,11 @@
 			android:exported="true">
 		</activity>
 
+		<activity android:name=".help.HelpActivity" 
+			android:label="@string/app_name"
+			android:exported="true">
+		</activity>
+		
 		<activity android:name=".appwidget.FastSettings" 
 			android:label="@string/app_name"
 			android:exported="true">
