--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,17 +16,12 @@
         	android:label="@string/app_name">
 		
         <activity android:name=".SetUpLiveWallpaper"
-                  android:label="@string/app_name">
-                                   
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            
+                android:label="@string/app_name"
+                android:exported="true">
         </activity>
         
-        <activity android:name=".appwidget.AndroidCustomGalleryActivity"
-                android:label="@string/app_name_gallery">
+        <activity android:name=".gallery.AndroidCustomGalleryActivity"
+                android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -84,6 +79,8 @@
                 <action android:name="hram.android.PhotoOfTheDay.appwidget.WidgetBroadcastEnum.SAVE_ACTION" />
             </intent-filter>
 			 -->	
+        </receiver>
+        <receiver android:name=".gallery.GalleryBroadcastReceiver">
         </receiver>
     </application>
     
