--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,8 @@
         
         <activity android:name=".gallery.AndroidCustomGalleryActivity"
                 android:label="@string/app_name"
-				android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+				android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+				android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
