--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,11 +9,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
     <uses-sdk android:minSdkVersion="8" 
-              android:targetSdkVersion="14"/>
+              android:targetSdkVersion="17"/>
     <uses-feature android:name="android.software.live_wallpaper" />
 
     <application android:icon="@drawable/icon" 
-        	android:label="@string/app_name">
+        	android:label="@string/app_name" 
+        	android:allowBackup="false">
 		
         <activity android:name=".SetUpLiveWallpaper"
                 android:label="@string/app_name"
@@ -80,8 +81,6 @@
                 <action android:name="hram.android.PhotoOfTheDay.appwidget.WidgetBroadcastEnum.SAVE_ACTION" />
             </intent-filter>
 			 -->	
-        </receiver>
-        <receiver android:name=".gallery.GalleryBroadcastReceiver">
         </receiver>
     </application>
     
