--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,8 +26,10 @@
 				android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+				<action android:name="android.intent.action.SET_WALLPAPER" />
+    			<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
         </activity>
         
 		<service android:name=".Wallpaper"
